--- a/Scene/skull.in
+++ b/Scene/skull.in
@@ -14,6 +14,7 @@ light(-300.0, 100.0, 600.0, 0.5, 0.5, 0.5);
 light(1000.0, 1000.0, 1000.0, 0.7, 0.7, 0.7);
 
 camera(-300.0, 100.0, 600.0,  0, 0, 0,  0, 1, 0,  20.0, XRES/YRES);
+depthrange(10.0, 1000.0);
 
 objflags(CULL_BACK SMOOTHSHADE LIGHTING);
 
